--- a/index.html
+++ b/index.html
@@ -32,11 +32,18 @@
 
     <main>
 
-
-
-
-
+        <div>
+            <img src="img/1.webp" alt="">  
+            <img src="img/2.webp" alt="">
+            <img src="img/3.webp" alt="">
+        </div>
         
+
+
+
+
+
+
     </main>
     
 </body>
